--- a/index.html
+++ b/index.html
@@ -1,1 +1,235 @@
-안녕하세요 60201637 신주민 입니다
+<html>
+  <head>
+    <!-- CSS Load -->
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+
+    <!-- JQuery Load -->
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- highchart load -->
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/highcharts-more.js"></script>
+    <script src="https://code.highcharts.com/modules/series-label.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+
+    <!-- my script load -->
+    <script src="js/script.js"></script>
+  </head>
+  <body style="background-color: #000000">
+    <div class="Info_Page">
+      <div class="Info_BackgroundImg"><img src="img/Info_Img.png" /></div>
+
+      <div class="Info_Content">
+        <div class="Info_Index"></div>
+
+        <div class="Info_Title">T1 JUNGLE<br />ONER</div>
+
+        <div class="Info_Overview_Top">
+          <div class="Info_Overview_Title">팀의 어려움을 해결해주는 선봉장</div>
+          <div class="font_Regular Info_Overview_Text">OVERVIEW</div>
+        </div>
+
+        <div class="Info_Description_Box">
+          <div class="Info_Description_Text font_Regular">
+            문현준 선수는 21년부터 현재까지 T1의 정글러로 활약하고 있습니다.
+            <br />
+            고등학생이라는 비교적 늦은 나이에 프로게이머의 길을 걷기 시작한 그는
+            <br />
+            <span class="Info_hover_font Info_hover_area_1">
+              T1 아카데미에 연습생으로
+            </span>
+            입단하며 T1과의 인연이 맺었습니다.
+            <br />
+            뛰어난 피지컬과 탁월한 교전 능력으로 구단의 많은 기대를 받았고,
+            <br />
+            21년부터
+            <span class="Info_hover_font Info_hover_area_2"
+              >T1 1군으로 콜업</span
+            >
+            되어 주전생활을 시작하게 되었습니다.
+            <br /><br />
+            문현준 선수는
+            <span class="Info_hover_font Info_hover_area_3"
+              >2022년 LCK Spring에서 첫 우승</span
+            >을 차지했지만, 이후 LCK,
+            <br />
+            MSI, WORLDS 등 주요 대회에서 연이은 준우승의 아쉬움을 겪었습니다.
+            <br />
+            그러나 2023 WORLDS에서 그는 마침내 아름다운 꽃을 피워내며
+            <br />
+            <span class="Info_hover_font Info_hover_area_4"
+              >리그오브레전드 챔피언</span
+            >
+            자리에 등극했습니다.
+          </div>
+
+          <div class="Info_Description_Img">
+            <img id="overview_img_container" src="img/overview_main_img.png" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="Divider"></div>
+
+    <div class="Records_Page">
+      <div class="Records_Page_Container">
+        <div class="Records_Title">Records</div>
+
+        <div class="Records_Content_Container">
+          <div class="Records_Content_Img">
+            <img src="img/Records_img1.png" />
+          </div>
+
+          <div class="Records_Content_Text_Right">
+            오너 선수는 <span class="f_red">1회</span>의<br /><span
+              class="f_red"
+              >LCK FINAL MVP</span
+            >
+            경력을 가지고<br />있습니다<br />
+          </div>
+        </div>
+
+        <div class="Records_Content_Container">
+          <div class="Records_Content_Text_Left">
+            오너 선수는 프로 통산 <span class="f_red">35개의</span
+            ><br />챔피언을 사용했습니다
+          </div>
+
+          <div class="Records_Content_Img">
+            <img src="img/Records_img2.png" />
+          </div>
+        </div>
+
+        <div class="Records_Content_Container">
+          <div class="Records_Content_Img">
+            <img src="img/Records_img3.png" />
+          </div>
+
+          <div class="Records_Content_Text_Right">
+            시그니처 챔피언인<br />바이로 <span class="f_red">총 144킬</span>을
+            <br />
+            달성했습니다
+          </div>
+        </div>
+
+        <div class="Records_Content_Container">
+          <div class="Records_Content_Text_Left">
+            2024년 3월 13일<br />LCK 통산
+            <span class="f_red">200승</span>을<br />달성했습니다
+          </div>
+
+          <div class="Records_Content_Img">
+            <img src="img/Records_img4.png" />
+          </div>
+        </div>
+
+        <div class="Records_Content_Container">
+          <div class="Records_Content_Img">
+            <img src="img/Records_img5.png" />
+          </div>
+
+          <div class="Records_Content_Text_Right">
+            프로 통산<br /><span class="f_red">352승</span>을 거두었습니다
+          </div>
+        </div>
+
+        <div class="Records_Content_Container">
+          <div class="Records_Content_Text_Left">
+            2024년 8월 14일<br />LCK 통산 <span class="f_red">1000킬을</span
+            ><br />달성했습니다
+          </div>
+
+          <div class="Records_Content_Img">
+            <img src="img/Records_img6.png" />
+          </div>
+        </div>
+
+        <div class="Records_Content_Container">
+          <div class="Records_Content_Img">
+            <img src="img/Records_img7.png" />
+          </div>
+
+          <div class="Records_Content_Text_Right">
+            T1과 함께 한지 <span class="f_red">1350일</span>이 되는<br />2024년
+            11월 2일 그는<br /><span class="f_red">두번째 월즈 트로피</span>를
+            듭니다
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="Divider"></div>
+
+    <div class="Statistics_Page">
+      <div class="Statistics_Page_Container">
+        <div class="Statistics_Title">Player<br />Statistics</div>
+        <div id="Statistics_1" class="Statistics_Content_Chart"></div>
+        <div class="Statistics_Chart_Description_Title">
+          상승하는 팀 내 기여도
+        </div>
+        <div class="Statistics_Chart_Description_Container">
+          <div class="font_Regular Statistics_Description">Description</div>
+          <div class="font_Regular Statistics_Chart_Description">
+            2021년부터 2024년까지의 통계를 비교해보면, 킬 관여율이 2021년에 비해
+            해마다 높아지고 있으며, 시야 점수 또한 꾸준히 상승하고 있습니다.
+            이는 오너 선수가 시간이 갈수록 팀의 초반 운영의 핵심으로 자리 잡고
+            있음을 보여줍니다. 특히, 2024년 시즌 동안 팀을 이끌었다는 평가에
+            걸맞게, 15분 CS 우세 확률이 65.8%에 달해 T1의 강점인 초반 운영의
+            중심에 오너가 있음을 알 수 있습니다.
+          </div>
+        </div>
+
+        <div class="Statistics_Title">vs<br />LCK Players</div>
+        <div id="Statistics_2" class="Statistics_Content_Chart"></div>
+        <div class="Statistics_Chart_Description_Title">주도권의 악마</div>
+        <div class="Statistics_Chart_Description_Container">
+          <div class="font_Regular Statistics_Description">Description</div>
+          <div class="font_Regular Statistics_Chart_Description">
+            T1은 초반부터 주도권을 잡고 상대를 압박하는 플레이를 강점으로 삼는
+            팀입니다. 이는 T1 라이너들의 강한 라인전뿐만 아니라, 오너 선수의
+            뛰어난 초반 설계와 교전 능력이 뒷받침해주기 때문에 가능한 일입니다.
+            초반 주도권을 놓치지 않는 오너 선수의 영향력은 다른 선수들에 비해
+            압도적으로 높은 15분 CS 우세 확률에서 잘 드러납니다. 또한, 분당 골드
+            지표를 통해 오너 선수가 단순히 초반 운영뿐만 아니라, 자원을 확보하며
+            팀의 캐리 역할도 맡고 있음을 알 수 있습니다.
+          </div>
+        </div>
+
+        <div class="Statistics_Title">with<br />T1 Players</div>
+        <div id="Statistics_3" class="Statistics_Content_Chart"></div>
+        <div class="Statistics_Chart_Description_Title">
+          다 해줬잖아. 팀의 정상화
+        </div>
+        <div
+          class="Statistics_Chart_Description_Container"
+          style="margin-bottom: 320px"
+        >
+          <div class="font_Regular Statistics_Description">Description</div>
+          <div class="font_Regular Statistics_Chart_Description">
+            T1은 강력한 주도권을 바탕으로 운영하는 팀입니다. 제우스와 구마유시
+            선수의 15분 CS 우세 확률을 통해, T1이 탑과 바텀에서 동시에 주도권을
+            잡는 경우가 많음을 알 수 있습니다. 탑과 바텀이 동시에 라인 압박을
+            가할 경우, 상대 정글러의 갱킹 위협이 커지는데, 이를 해결하는 역할을
+            오너 선수가 맡고 있습니다. 팀 내에서 가장 높은 킬 관여율과 두 번째로
+            높은 시야 점수는 오너 선수가 이러한 역할을 성공적으로 수행하고
+            있음을 보여줍니다.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="Divider"></div>
+
+    <div class="Bottom_Page">
+      <div class="Bottom_Img"><img src="img/interview_img.png" /></div>
+    </div>
+  </body>
+</html>
